Fixed a bug where the menu items were not visible on tablet if they had a black color.

--- a/less/plugins/ecommerce/ecommerce-basket-summary.less
+++ b/less/plugins/ecommerce/ecommerce-basket-summary.less
@@ -296,6 +296,10 @@
 			text-align: right;
 		}
 	}
+	
+	&__button {
+		margin-top: 1.5em;
+	}
 }
 
 // ------------------------------
