--- a/less/plugins/plugins.less
+++ b/less/plugins/plugins.less
@@ -198,6 +198,7 @@ a.tag-link,
 	a.button--pagination {
 		.link-button;
 		.transition();
+		line-height: unit(@font__button--line-height*0.15, em);
 	}
 }
 
